--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "4.1.11",
     "zod": "3.25.76"
   },
@@ -41,7 +42,8 @@
     "@eslint-react/eslint-plugin": "~1.52.3",
     "@eslint/js": "~9.31.0",
     "@tanstack/eslint-plugin-query": "~5.81.2",
-    "@tanstack/router-devtools": "~1.129.5",
+    "@tanstack/react-query-devtools": "^5.84.1",
+    "@tanstack/react-router-devtools": "^1.130.11",
     "@tanstack/router-plugin": "~1.129.5",
     "@testing-library/jest-dom": "~6.6.3",
     "@testing-library/react": "~16.3.0",
