--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,6 +60,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "~8.38.0",
     "vite": "~7.0.5",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "~5.1.4",
     "vitest": "~2.1.8"
   }
