--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "dotenv-expand": "12.0.2",
     "hono": "4.8.5",
     "lucide-react": "0.475.0",
+    "motion": "^12.23.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
