--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,11 +31,11 @@
     "dotenv-expand": "12.0.2",
     "hono": "4.8.5",
     "lucide-react": "0.475.0",
-    "motion": "^12.23.12",
+    "motion": "12.23.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
-    "resize-observer-polyfill": "^1.5.1",
+    "resize-observer-polyfill": "1.5.1",
     "tailwindcss": "4.1.11",
     "zod": "3.25.76"
   },
@@ -43,8 +43,8 @@
     "@eslint-react/eslint-plugin": "~1.52.3",
     "@eslint/js": "~9.31.0",
     "@tanstack/eslint-plugin-query": "~5.81.2",
-    "@tanstack/react-query-devtools": "^5.84.1",
-    "@tanstack/react-router-devtools": "^1.130.11",
+    "@tanstack/react-query-devtools": "~5.84.1",
+    "@tanstack/react-router-devtools": "~1.130.11",
     "@tanstack/router-plugin": "~1.129.5",
     "@testing-library/jest-dom": "~6.6.3",
     "@testing-library/react": "~16.3.0",
@@ -61,7 +61,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "~8.38.0",
     "vite": "~7.0.5",
-    "vite-plugin-svgr": "^4.3.0",
+    "vite-plugin-svgr": "~4.3.0",
     "vite-tsconfig-paths": "~5.1.4",
     "vitest": "~2.1.8"
   }
