--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     build:
       context: ../
       dockerfile: docker/Dockerfile.web
+    ports:
+      - "8080:80"
     depends_on:
       api:
         condition: service_started
