--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --max-warnings 0 --fix",
     "preview": "vite preview",
     "typecheck": "tsc --project tsconfig.app.json --noEmit",
-    "test": "vitest --coverage"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
