--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,7 +35,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "10.1.0",
     "resize-observer-polyfill": "1.5.1",
     "tailwindcss": "4.1.11",
     "zod": "3.25.76"
