--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --max-warnings 0 --fix",
     "preview": "vite preview",
     "typecheck": "tsc --project tsconfig.app.json --noEmit",
-    "test": "vitest --coverage"
+    "test": "vitest run --coverage"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
@@ -35,6 +35,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
+    "react-markdown": "10.1.0",
     "resize-observer-polyfill": "1.5.1",
     "tailwindcss": "4.1.11",
     "zod": "3.25.76"
