--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,11 +7,7 @@ server {
     index index.html;
     try_files $uri $uri/ /index.html;
   }
-
-  location /api/ {
-    proxy_pass http://api:9999/api/;
-    proxy_http_version 1.1;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-  }
+  
+  # API requests are now directed to api.cronicorn.com
+  # No more proxy needed here
 }
