--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,7 +7,18 @@ server {
     index index.html;
     try_files $uri $uri/ /index.html;
   }
-  
-  # API requests are now directed to api.cronicorn.com
-  # No more proxy needed here
+
+  location /api/ {
+    proxy_pass http://api:9999/api/;
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    
+    # Increase timeouts for auth providers (which might be slow)
+    proxy_connect_timeout 180s;
+    proxy_send_timeout 180s;
+    proxy_read_timeout 180s;
+  }
 }
