--- a/packages/scheduling-engine/package.json
+++ b/packages/scheduling-engine/package.json
@@ -10,34 +10,36 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint . --ext ts",
-    "lint:fix": "eslint . --ext ts --fix",
-    "clean": "rm -rf dist",
+    "lint": "eslint . --max-warnings 0",
+    "typecheck": "tsc --noEmit",
+    "lint:fix": "eslint . --max-warnings 0 --fix",
+    "clean": "rm -rf dist node_modules",
     "start": "node dist/index.js",
     "start:dev": "tsx src/index.ts"
   },
-  "dependencies": {
-    "ai": "^2.2.29",
-    "@ai-sdk/openai": "^1.0.0",
-    "drizzle-orm": "^0.30.0",
-    "pino": "^8.16.2",
-    "zod": "^3.22.4",
-    "node-fetch": "^3.3.2",
-    "p-queue": "^7.4.1",
-    "cron-parser": "^4.9.0",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/uuid": "^9.0.7",
-    "typescript": "^5.3.3",
-    "tsx": "^4.6.2",
-    "vitest": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "eslint": "^8.56.0",
-    "@cronicorn/eslint-config": "workspace:*"
-  },
   "peerDependencies": {
     "@tasks-app/api": "workspace:*"
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "2.0.10",
+    "ai": "5.0.10",
+    "cron-parser": "4.9.0",
+    "drizzle-orm": "0.38.3",
+    "node-fetch": "3.3.2",
+    "p-queue": "7.4.1",
+    "pino": "9.6.0",
+    "uuid": "9.0.1",
+    "vite-tsconfig-paths": "5.1.4",
+    "zod": "3.25.76"
+  },
+  "devDependencies": {
+    "@tasks-app/eslint-config": "workspace:*",
+    "@types/node": "~22.10.2",
+    "@types/uuid": "~9.0.7",
+    "@vitest/coverage-v8": "~2.1.9",
+    "eslint": "~9.31.0",
+    "tsx": "~4.19.2",
+    "typescript": "~5.8.3",
+    "vitest": "~2.1.8"
   }
 }
