--- a/packages/scheduling-engine/tsconfig.json
+++ b/packages/scheduling-engine/tsconfig.json
@@ -1,24 +1,19 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020", "DOM"],
-    "baseUrl": "./src",
-    "rootDir": "./src",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "rootDir": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/api/*": ["../../apps/api/src/*"]
     },
-    "resolveJsonModule": true,
-    "strict": true,
+    "typeRoots": ["./node_modules/@types"],
+    "types": ["node"],
     "declaration": true,
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "skipLibCheck": true
+    "declarationMap": true,
+    "outDir": "dist"
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
+  "watchOptions": {
+    "excludeDirectories": ["**/node_modules", "**/packages/web"]
+  },
+  "include": ["src"]
 }
