--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "test": "cross-env NODE_ENV=test vitest run --coverage",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "migrate:prod": "drizzle-kit migrate --config=/app/apps/api/dist/drizzle.config.js",
     "db:push": "drizzle-kit push",
     "db:reset": "tsx --env-file=.env src/db/reset.ts",
     "db:seed": "tsx --env-file=.env src/db/run-seed.ts",
