--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "pnpm": ">=10.0.0"
 },
   "scripts": {
-    "dev": "turbo run dev",
+    "dev": "pnpm run -r --parallel dev",
     "clean": "pnpm run -r --parallel clean && rm -rf node_modules",
     "build": "pnpm run -r build",
     "test": "pnpm run -r --parallel test",
@@ -24,9 +24,6 @@
     "sync:check": "syncpack lint",
     "sync:fix": "syncpack fix",
     "kill": "pnpx kill-port 3333 9999"
-  },
-  "dependencies": {
-    "turbo": "2.5.5"
   },
   "devDependencies": {
     "syncpack": "~14.0.0-alpha.18"
